// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`psql.sql > line 1 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 58 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 115 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 126 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 138 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 141 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 143 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 36,
            "relname": "gexec_test",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 47,
                "typeName": {
                  "location": 49,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 54,
                "typeName": {
                  "location": 56,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 62,
                "typeName": {
                  "location": 64,
                  "names": [
                    {
                      "String": {
                        "sval": "date",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "d",
                "is_local": true,
                "location": 70,
                "typeName": {
                  "location": 72,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "float8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 147 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 187 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 196 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 198 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 200 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 204 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 206 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 208 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 212 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 214 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 216 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 223 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 225 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 227 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 231 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 233 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 235 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 239 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 241 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 243 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 252 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 254 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 256 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 260 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 262 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 264 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 268 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 270 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 272 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 279 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 281 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 283 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 287 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 289 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 291 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 295 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 297 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 299 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 301 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "n",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 153,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 155,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 137,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 58,
                    "name": "0123456789abcdef",
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 65,
                              "sval": {
                                "sval": "x",
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 69,
                                },
                              },
                              "location": 70,
                              "name": [
                                {
                                  "String": {
                                    "sval": "*",
                                  },
                                },
                              ],
                              "rexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "n",
                                      },
                                    },
                                  ],
                                  "location": 71,
                                },
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "repeat",
                            },
                          },
                        ],
                        "location": 58,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 97,
                    "name": "0123456789",
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 104,
                              "sval": {
                                "sval": "y",
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 20,
                                  },
                                  "location": 108,
                                },
                              },
                              "location": 110,
                              "name": [
                                {
                                  "String": {
                                    "sval": "-",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 2,
                                      },
                                      "location": 111,
                                    },
                                  },
                                  "location": 112,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "*",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "n",
                                          },
                                        },
                                      ],
                                      "location": 113,
                                    },
                                  },
                                },
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "repeat",
                            },
                          },
                        ],
                        "location": 97,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 304 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 313 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 315 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 317 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 321 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 323 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 325 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 329 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 331 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 333 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 340 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 342 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 344 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 348 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 350 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 352 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 356 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 358 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 360 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 367 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 369 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 371 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 375 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 377 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 379 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 383 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 385 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 387 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 396 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 398 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 400 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 404 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 406 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 408 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 412 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 414 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 416 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 422 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 424 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 426 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 430 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 432 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 434 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 438 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 440 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 442 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 444 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 451 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 468 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 499 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "role": "regress_display_role",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 500 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterOwnerStmt": {
          "newowner": {
            "location": 39,
            "rolename": "regress_display_role",
            "roletype": "ROLESPEC_CSTRING",
          },
          "object": {
            "String": {
              "sval": "tableam_display",
            },
          },
          "objectType": "OBJECT_SCHEMA",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 501 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 20,
                "sval": {
                  "sval": "tableam_display",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "search_path",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 502 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateAmStmt": {
          "amname": "heap_psql",
          "amtype": "t",
          "handler_name": [
            {
              "String": {
                "sval": "heap_tableam_handler",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 503 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 13,
                "sval": {
                  "sval": "regress_display_role",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "role",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 504 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "accessMethod": "heap_psql",
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 66,
            "relname": "tbl_heap_psql",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 80,
                "typeName": {
                  "location": 83,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "f2",
                "is_local": true,
                "location": 88,
                "typeName": {
                  "location": 91,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "bpchar",
                      },
                    },
                  ],
                  "typemod": -1,
                  "typmods": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 100,
                        },
                        "location": 96,
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 506 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "accessMethod": "heap",
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "tbl_heap",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 23,
                "typeName": {
                  "location": 26,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "f2",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "bpchar",
                      },
                    },
                  ],
                  "typemod": -1,
                  "typmods": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 100,
                        },
                        "location": 39,
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 507 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 46,
                    "relname": "tbl_heap_psql",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 38,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 38,
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 13,
            "relname": "view_heap_psql",
            "relpersistence": "p",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 508 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "accessMethod": "heap_psql",
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 26,
              "relname": "mat_view_heap_psql",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_MATVIEW",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 79,
                    "relname": "tbl_heap_psql",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 71,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 71,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 509 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 523 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "search_path",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 524 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "String": {
                "sval": "tableam_display",
              },
            },
          ],
          "removeType": "OBJECT_SCHEMA",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 525 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "String": {
                "sval": "heap_psql",
              },
            },
          ],
          "removeType": "OBJECT_ACCESS_METHOD",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 526 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_display_role",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 527 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 536 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 558 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 562 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 565 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 568 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 572 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 575 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 578 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 580 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 601 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 604 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 607 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 609 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 613 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 615 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "data",
                "val": {
                  "A_Const": {
                    "location": 8,
                    "sval": {
                      "sval": "\\.",
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 616 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 618 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 649 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 653 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 656 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 659 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 664 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 667 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 670 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 673 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 694 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 698 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 701 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 704 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 707 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 711 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 714 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 717 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 720 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 722 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 743 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 747 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 750 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 753 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 756 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 759 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 764 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 767 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 770 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 773 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 776 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 779 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 800 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 804 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 807 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 810 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 814 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 817 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 820 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 822 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 831 1`] = `[Error: syntax error at or near "\\"]`;

exports[`psql.sql > line 856 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "A_Const": {
                    "location": 10,
                    "sval": {
                      "sval": "still okay",
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`psql.sql > line 857 1`] = `[Error: syntax error at or near "\\"]`;
